HTML課題非レスポンシブ時の縦並びの修正

--- a/kadai1.css
+++ b/kadai1.css
@@ -12,7 +12,7 @@ header {
 main {
   width: 960px;
   margin: 50px auto;
-  display: block;
+  display: flex;
 }
 
 .step-box {
@@ -71,6 +71,7 @@ footer {
     width: 100%;
     margin-top: 50px;
     margin-bottom: 50px;
+    display: block;
   }
 
   .step-box {
