--- a/kadai1.css
+++ b/kadai1.css
@@ -69,8 +69,7 @@ footer {
 
   main {
     width: 100%;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin: 50px auto;
     display: block;
   }
 
